# Udacity

./: LiAlg.py  hyperplane.py  line.py  linsys.py  notes.txt  plane.py
C++ Nanodegree/: a-star-search.cpp  a.out  arrays.cpp  auto.cpp  car_main.cpp  classes.cpp  classes_modern.cpp  const_vs_constexpr.cpp  enum_and_switch.cpp  formatting_conventions.txt  istringstream.cpp  iterate_matrix.cpp  overloading_practice.cpp  parseline.cpp  pointer_return.cpp  pointers_more.cpp  printboard.cpp  structs_accessors_and_mutators.cpp  test.cpp
C++ Nanodegree/Capstone/: CMakeLists.txt  README.md
C++ Nanodegree/Capstone/images/: test.imgg
C++ Nanodegree/Capstone/src/: Image.cpp  Image.h  ImageDetector.cpp  ImageDetector.h  ObjectDetection-main.cpp  StopSignContours.cpp  StopSignContours.h  cv_image.cpp  imageDetector.cpp  imageDetector.h  preProcessor.cpp  preProcessor.h  stopSignContours.cpp  stopSignContours.h  templateMatch.cpp  templateMatch.h  whiteCarDetector.cpp  whiteCarDetector.h
Data_science_lesson_2/: 1  A_more_complex_Heuristic.py  A_simple_Heuristic.py  Your_Custom_Heuristic.py
Data_science_lesson_3/: 1  Data_wrangling_SQL_example.py  Data_wrangling_csv_exercise.py
Intro to Self-Driving Cars/: probability_foundations.txt
Intro to tensorflow/: first_training.py
Nanodegree introduction/: .canny_edge.py.swp  .computer_vision.py.swp  .hog_classify.py.swp  .hog_features.py.swp  .mult_detects_and_FP.py.swp  .template_matching.py.swp  3d_plotting.py  color_classify.py  computer_vision.py  hog_classify.py  hog_features.py  hough_transform.py  lesson_functions.py  (+7 more)
(+290 files in other folders)
